Fixed alignment of project desc

--- a/src/components/ProjectsSection.scss
+++ b/src/components/ProjectsSection.scss
@@ -90,6 +90,8 @@
 					color: #aaa;
 					font-weight: 600;
 					display: none;
+					// border: thin solid white;
+					height: 100%;
 				}
 
 				.languages {
